--- a/index.html
+++ b/index.html
@@ -82,6 +82,40 @@
             flex: 1;
             margin: 0 5px;
         }
+
+        @media (max-width: 768px) {
+            .card {
+                width: 100%;
+                height: auto;
+                padding: 10px;
+            }
+            .row {
+                flex-direction: column;
+                align-items: center;
+            }
+            .photo, .text {
+                width: 100%;
+                max-height: none;
+                margin-bottom: 20px;
+            }
+            .text {
+                text-align: center;
+                padding: 10px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .text h1 {
+                font-size: 20px;
+            }
+            .text p {
+                font-size: 14px;
+            }
+            .button {
+                padding: 8px 16px;
+                font-size: 12px;
+            }
+        }
     </style>
 </head>
 <body>
