--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
         }
 
         @media (max-width: 480px) {
+            .card {
+                padding: 10px;
+            }
+            .logo {
+                width: 50px;
+                margin: 0 auto 10px;
+            }
             .text h1 {
                 font-size: 20px;
             }
