--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         .logo {
             width: 60px;
             margin: 0 auto 20px;
+            z-index: 1;
         }
         .row {
             display: flex;
