--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             box-shadow: 0 0 10px rgba(180, 17, 17, 0.1);
             text-align: center;
             width: 800px;
-            height: 600px;
+            max-width: 100%;
+            height: auto;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -31,7 +32,6 @@
         .logo {
             width: 60px;
             margin: 0 auto 20px;
-            z-index: 1;
         }
         .row {
             display: flex;
@@ -39,9 +39,11 @@
             align-items: center;
             flex: 1;
             margin-bottom: 20px;
+            flex-wrap: wrap;
         }
         .photo {
             width: 45%;
+            max-width: 100%;
             height: auto;
             max-height: 350px;
             object-fit: contain;
@@ -49,6 +51,7 @@
         }
         .text {
             width: 45%;
+            max-width: 100%;
             text-align: left;
             background-color: #2db1e6;
             color: #fff;
@@ -68,6 +71,7 @@
             display: flex;
             justify-content: space-around;
             margin-top: 20px;
+            flex-wrap: wrap;
         }
         .button {
             display: inline-block;
@@ -81,15 +85,10 @@
             cursor: pointer;
             text-align: center;
             flex: 1;
-            margin: 0 5px;
+            margin: 5px;
         }
 
         @media (max-width: 768px) {
-            .card {
-                width: 100%;
-                height: auto;
-                padding: 10px;
-            }
             .row {
                 flex-direction: column;
                 align-items: center;
@@ -106,13 +105,6 @@
         }
 
         @media (max-width: 480px) {
-            .card {
-                padding: 10px;
-            }
-            .logo {
-                width: 50px;
-                margin: 0 auto 10px;
-            }
             .text h1 {
                 font-size: 20px;
             }
@@ -128,8 +120,8 @@
 </head>
 <body>
     <div class="card">
+        <img src="img/logo.png" alt="Логотип" class="logo">
         <div class="row">
-            <img src="img/logo.png" alt="Логотип" class="logo">
             <img src="img/photo.jpg" alt="Фото" class="photo">
             <div class="text">
                 <h1>Наталья Глава, Ваш личный агент по недвижимости.</h1>
