--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             box-sizing: border-box;
         }
         .card {
@@ -43,15 +43,14 @@
         }
         .photo {
             width: 45%;
-            max-width: 100%;
             height: auto;
             max-height: 350px;
             object-fit: contain;
             border-radius: 10px;
+            margin-bottom: 20px;
         }
         .text {
             width: 45%;
-            max-width: 100%;
             text-align: left;
             background-color: #2db1e6;
             color: #fff;
